Now, data is being stored on table Nutrient, and changed everything related to that